# slimio_common

./: .gitignore  Makefile.am  README.md  configure.ac
include/: config.h
include/slimIO/: utilities.h
include/slimIO/http/: client.h  headers.h  parser.h  request.h  response.h
include/slimio/: utilities.h
include/slimio/http/: client.h  headers.h  parser.h  request.h  response.h
src/: Makefile.am  slimIO  slimIO_http_client.cpp  slimIO_http_headers.cpp  slimIO_http_parser.cpp  slimIO_http_request.cpp  slimIO_http_response.cpp  slimIO_utilities.cpp  slimio  slimio_http.cpp  slimio_http_client.cpp  slimio_http_headers.cpp  slimio_http_parser.cpp  slimio_http_request.cpp  slimio_http_response.cpp  slimio_utilities.cpp
tests/: Makefile.am  assert_client_fetch.cpp  assert_request_parses.cpp  assert_utilities_get_ip_address.cpp  main.cpp  tests.h
